# trivial-stl

./: CMakeLists.txt
include/: test.h
tests/: tests.cpp
